--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <title>YourMeal - Самые сочные бургеры</title>
 
   <link rel="stylesheet" href="css/index.css">
+
+  <!--Подключаем скрипт к странице-->
+  <script defer src="js/index.js"></script>
 </head>
 
 <body>
