--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/index.css">
 
   <!--Подключаем скрипт к странице-->
-  <script defer src="js/index.js"></script>
+  <script type="module" src="js/index.js"></script>
 </head>
 
 <body>
